--- a/RemoteController/RemoteController.Core/RemoteController.Core.csproj
+++ b/RemoteController/RemoteController.Core/RemoteController.Core.csproj
@@ -1,16 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <RootNamespace>RemoteController</RootNamespace>
+	<PropertyGroup>
+		<RootNamespace>RemoteController</RootNamespace>
 
-    <Authors>Veniamin Lytkin @ Epsil0neR</Authors>
-    <Copyright>Copyright © Epsil0neR 2020</Copyright>
-    <TargetFrameworks>net7.0</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+		<Authors>Veniamin Lytkin @ Epsil0neR</Authors>
+		<Copyright>Copyright © Epsil0neR 2020</Copyright>
+		<TargetFrameworks>net7.0</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Epsiloner.Core" Version="1.0.22" />
-  </ItemGroup>
+	<!-- NuGet dependancies -->
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<PackageReference Include="Epsiloner.Core" Version="1.0.22" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<ProjectReference Include="..\..\..\Epsiloner-libs\src\Epsiloner.Core\Epsiloner.Core.csproj" />
+	</ItemGroup>
 </Project>
