--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -20,14 +20,13 @@
 
   <ItemGroup>
     <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
-    <PackageReference Include="Epsiloner.Core" Version="1.0.22" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Epsiloner.OptionsModule" Version="0.4.0" />
     <PackageReference Include="Epsiloner.Wpf.Core" Version="1.2.0" />
     <PackageReference Include="Epsiloner.Wpf.Behaviors" Version="1.1.0" />
     <PackageReference Include="Epsiloner.Wpf.SymbolIcons" Version="1.0.1" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
 
